# GetSubtitles

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: push.yml
getsub/: main.py  progress_bar.py  subhd.py  sys_global_var.py  zimuku.py  zimuzu.py
getsubtitle/: __version__.py  archive.py  constants.py  main.py  models.py  path.py  progress_bar.py  subhd.py  subtitle.py  sys_global_var.py  utils.py  zimuku.py  zimuzu.py
tests/: test_utils.py
